compiler/fir/analysis-tests/testData/resolve/checkers/useBeforeStaticInitialization/topLevelCyclicDependency.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
<!POTENTIALLY_UNINITIALIZED_PROPERTY!>val a = <!POTENTIALLY_UNINITIALIZED_ACCESSES!>A.b<!><!>

<!POSSIBLE_INITIALIZATION_DEADLOCK!>object A<!> {
    <!POTENTIALLY_UNINITIALIZED_PROPERTY!>val b: Any = <!POTENTIALLY_UNINITIALIZED_ACCESSES!>a<!><!>
}
